This file lists all changes made to the game driver in all gory detail.
See the file HISTORY for a user-oriented summary of all the changes.

27-Aug-2001 (Lars Duening)  (3.3.92)
    - (interpret.c) Improved the check for reference loop creation on
        assignment (suggested by Menaures).
    - (many files) When reloading the master object, the driver freed
        through the driver hooks some object references it shouldn't free.
        If a lambda driver hook is bound to an object, this reference is
        now counted. This makes rebinding the hook closure a bit more
        laborsome, but overall the handling is safer since consistent
        (reported by Tomba).

26-Aug-2001 (Lars Duening)  (3.3.91)
    - (interpret.c) Efun sscanf() didn't check its arguments (reported by
        Tomba).
    - (simulate.c) Running the driver with '-d -d' crashed it when loading
        objects.
    - (interpret.c) The refcount check for got to count the blueprint
        reference in programs (reported by Tomba).
    - (smalloc.c) The check against MAX_MALLOCED was incomplete and
        could lead to use of foreign memory (reported by Menaures).

25-Aug-2001 (Lars Duening)
    - (prolang.y) The range checks for the new [>] indexing were not complete
        (reported by Tomba).

23-Aug-2001 (Lars Duening)  (3.3.90)
    - (array.c) ERQ callbacks for a destructed object don't have a
        current_object at the time the error occurs. The error handling code
        allocates an array, but the array code was still assuming that
        current_object is always valid (reported by Fiona).
    - (prolang.y) Redefining an inherited private function with a non-private
        one, and then inheriting the redefinition didn't work (reported by
        Menaures).

22-Aug-2001 (Lars Duening)  (3.3.89)
    - (interpret.c) The lambda protection had a bug: when a non-lambda closure
         was called from within an executed lambda, the lambda closure was