@@ -22,13 +22,12 @@
 ;; TODO: The regexp() functions and sscanf() should be able to handle '\0' as
 ;; TODO:: data byte, not as terminator.
               
-(Project-Version lpmud 3-3 92)
-(Parent-Version lpmud 3-3 91)
-(Version-Log "Improved the reference loop check on assignment.
-References from closure driver hooks to objects are now counted.")
+(Project-Version lpmud 3-3 93)
+(Parent-Version lpmud 3-3 92)
+(Version-Log "The reference loop check was too strict.")
 (New-Version-Log
 "")
-(Checkin-Time "Mon, 27 Aug 2001 22:57:00 -0600")
+(Checkin-Time "Tue, 28 Aug 2001 07:54:13 -0600")
 (Checkin-Login lars)
 (Populate-Ignore ("~$" "\\.o$" "core$" "\\.emacs" "\\.a$" "\\.deps"
                   "\\.gz$" "\\.orig$" "\\.rej$" "\\.xSYM" "^driver$"
@@ -61,7 +60,7 @@ References from closure driver hooks to objects are now counted.")
   (README (lpmud/n/0_README 1.4.1.1 644))
   (COPYRIGHT (lpmud/d/20_Copyright 1.10.1.3 644))
   (CREDITS (lpmud/d/22_CREDITS 1.70.1.25 644))
-  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.155 644))
+  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.156 644))
   (HISTORY (lpmud/f/49_HISTORY 1.198 644))
   (INSTALL (lpmud/d/18_INSTALL 1.11.1.13 644))
   (COPYING.LIB (lpmud/k/14_COPYING.LI 1.2 644))
@@ -140,7 +139,7 @@ References from closure driver hooks to objects are now counted.")
   (src/heartbeat.h (lpmud/m/41_heartbeat. 1.6.1.4 644))
   (src/heartbeat.c (lpmud/m/42_heartbeat. 1.18.1.6 644))
   (src/interpret.h (lpmud/b/13_interpret. 1.33.1.20 644))
-  (src/interpret.c (lpmud/b/14_interpret. 1.125.1.77 644))
+  (src/interpret.c (lpmud/b/14_interpret. 1.125.1.78 644))
   (src/lex.h (lpmud/b/11_lex.h 1.16.1.8 644))
   (src/lex.c (lpmud/b/12_lex.c 1.62.1.54 644))
   (src/main.h (lpmud/f/31_main.h 1.14.1.4.1.5 644))
